--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>PicNic Timer</title>
     <link rel="icon" href="picnic.png">
     <style>
@@ -72,31 +72,30 @@
         }
 
         .wrapper {
-            width: 100%;
-            max-width: 1100px;
+            width: 900px;
             position: relative;
             z-index: 1;
         }
 
         .header {
             text-align: center;
-            margin-bottom: 60px;
+            margin-bottom: 40px;
         }
 
         .logo-container {
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 20px;
-            margin-bottom: 30px;
+            gap: 15px;
+            margin-bottom: 20px;
             position: relative;
         }
 
         .logo {
-            width: 120px;
-            height: 120px;
+            width: 100px;
+            height: 100px;
             background: linear-gradient(135deg, #ffffff 0%, #f0f0f0 100%);
-            border-radius: 32px;
+            border-radius: 24px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -117,19 +116,19 @@
         }
 
         h1 {
-            font-size: 3.5em;
+            font-size: 44px;
             font-weight: 900;
             text-shadow: 
                 0 4px 20px rgba(0, 0, 0, 0.3),
                 0 0 40px rgba(255, 200, 100, 0.2);
             letter-spacing: -2px;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
 
         .subtitle {
-            font-size: 1.3em;
+            font-size: 17px;
             opacity: 0.95;
-            margin-top: 10px;
+            margin-top: 8px;
             font-weight: 300;
             letter-spacing: 0.5px;
         }
@@ -137,14 +136,14 @@
         .bento-grid {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 20px;
+            gap: 16px;
             margin-bottom: 30px;
         }
 
         .bento-card {
             background: linear-gradient(135deg, rgba(255, 255, 255, 0.98) 0%, rgba(245, 245, 245, 0.98) 100%);
-            padding: 32px 24px;
-            border-radius: 28px;
+            padding: 24px 20px;
+            border-radius: 24px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -155,7 +154,7 @@
                 0 0 0 1px rgba(255, 68, 68, 0.1);
             color: #ff4444;
             text-align: center;
-            min-height: 180px;
+            min-height: 160px;
             position: relative;
             overflow: hidden;
         }
@@ -182,10 +181,10 @@
         }
 
         .card-value {
-            font-size: 3em;
+            font-size: 35px;
             font-weight: 900;
             line-height: 1;
-            margin-bottom: 14px;
+            margin-bottom: 10px;
             display: block;
             position: relative;
             min-height: 1em;
@@ -215,17 +214,17 @@
         }
 
         .card-label {
-            font-size: 0.8em;
+            font-size: 12px;
             font-weight: 700;
             color: #aaa;
             text-transform: uppercase;
-            letter-spacing: 1.5px;
+            letter-spacing: 1.2px;
         }
 
         .months-card {
             grid-column: span 2;
             grid-row: span 2;
-            min-height: 380px;
+            min-height: 360px;
             background: linear-gradient(135deg, rgba(255, 255, 255, 0.99) 0%, rgba(240, 240, 240, 0.99) 100%);
             box-shadow: 
                 0 30px 80px rgba(0, 0, 0, 0.3),
@@ -234,7 +233,7 @@
         }
 
         .months-card .card-value {
-            font-size: 6em;
+            font-size: 72px;
         }
 
         .years-card {
@@ -247,7 +246,7 @@
         }
 
         .seconds-card .card-value {
-            font-size: 5em;
+            font-size: 56px;
         }
 
         @keyframes slideDown {
@@ -284,68 +283,265 @@
         .bento-card:nth-child(6) { animation-delay: 0.5s; }
         .bento-card:nth-child(7) { animation-delay: 0.6s; }
 
-        @media (max-width: 768px) {
-            .bento-grid {
-                grid-template-columns: repeat(3, 1fr);
-                gap: 16px;
-            }
-
-            .years-card {
-                grid-column: span 2;
-                grid-row: span 1;
-                min-height: 180px;
-            }
-
-            .years-card .card-value {
-                font-size: 3.5em;
+        /* Écran 1440x900 */
+        @media (max-width: 1440px) {
+            .wrapper {
+                width: 82%;
+                max-width: 900px;
             }
 
             h1 {
-                font-size: 2.8em;
+                font-size: 38px;
+                margin-bottom: 10px;
+            }
+
+            .subtitle {
+                font-size: 15px;
+                margin-top: 5px;
             }
 
             .logo {
                 width: 90px;
                 height: 90px;
             }
-        }
 
-        @media (max-width: 600px) {
+            .logo-container {
+                margin-bottom: 15px;
+                gap: 12px;
+            }
+
+            .header {
+                margin-bottom: 25px;
+            }
+
             .bento-grid {
-                grid-template-columns: repeat(2, 1fr);
-                gap: 14px;
-            }
-
-            .years-card {
-                grid-column: span 1;
-                grid-row: span 1;
-                min-height: 160px;
-            }
-
-            .years-card .card-value {
-                font-size: 2.8em;
-            }
-
-            h1 {
-                font-size: 2em;
-            }
-
-            .logo {
-                width: 75px;
-                height: 75px;
-            }
-
-            .bento-card {
-                padding: 24px 16px;
-                min-height: 150px;
+                gap: 12px;
+                margin-bottom: 25px;
             }
 
             .card-value {
-                font-size: 2.2em;
+                font-size: 30px;
+                margin-bottom: 10px;
+            }
+
+            .months-card .card-value {
+                font-size: 58px;
+            }
+
+            .seconds-card .card-value {
+                font-size: 46px;
+            }
+
+            .card-label {
+                font-size: 10px;
+                letter-spacing: 0.9px;
+            }
+
+            .bento-card {
+                padding: 16px 12px;
+                min-height: 130px;
+            }
+
+            .months-card {
+                min-height: 220px;
+            }
+        }
+
+        /* Écrans petits (1000px et moins) */
+        @media (max-width: 1000px) {
+            .wrapper {
+                width: 95%;
+                max-width: 800px;
+            }
+
+            h1 {
+                font-size: 28px;
+                margin-bottom: 8px;
             }
 
             .subtitle {
-                font-size: 1em;
+                font-size: 12px;
+            }
+
+            .logo {
+                width: 70px;
+                height: 70px;
+            }
+
+            .card-value {
+                font-size: 22px;
+            }
+
+            .months-card .card-value {
+                font-size: 45px;
+            }
+
+            .seconds-card .card-value {
+                font-size: 35px;
+            }
+
+            .card-label {
+                font-size: 9px;
+            }
+
+            .bento-card {
+                padding: 12px 10px;
+                min-height: 110px;
+            }
+
+            .months-card {
+                min-height: 240px;
+            }
+
+            .bento-grid {
+                gap: 10px;
+                margin-bottom: 20px;
+            }
+
+            .header {
+                margin-bottom: 25px;
+            }
+
+            .logo-container {
+                margin-bottom: 15px;
+                gap: 10px;
+            }
+        }
+
+        /* Très petits écrans (600px et moins) */
+        @media (max-width: 600px) {
+            .wrapper {
+                width: 100%;
+            }
+
+            h1 {
+                font-size: 20px;
+                margin-bottom: 6px;
+            }
+
+            .subtitle {
+                font-size: 11px;
+                margin-top: 4px;
+            }
+
+            .logo {
+                width: 50px;
+                height: 50px;
+            }
+
+            .logo-container {
+                margin-bottom: 12px;
+                gap: 8px;
+            }
+
+            .header {
+                margin-bottom: 16px;
+            }
+
+            .bento-grid {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 8px;
+                margin-bottom: 16px;
+            }
+
+            .months-card {
+                grid-column: span 2;
+                grid-row: span 1;
+                min-height: auto;
+            }
+
+            .seconds-card {
+                grid-column: span 2;
+            }
+
+            .card-value {
+                font-size: 16px;
+                margin-bottom: 6px;
+            }
+
+            .months-card .card-value {
+                font-size: 32px;
+            }
+
+            .seconds-card .card-value {
+                font-size: 26px;
+            }
+
+            .card-label {
+                font-size: 8px;
+                letter-spacing: 0.6px;
+            }
+
+            .bento-card {
+                padding: 10px 8px;
+                min-height: 90px;
+            }
+
+            .months-card {
+                min-height: 140px;
+            }
+        }
+
+        /* Ultra petits écrans (400px et moins) */
+        @media (max-width: 400px) {
+            .wrapper {
+                width: 100%;
+            }
+
+            h1 {
+                font-size: 16px;
+                margin-bottom: 4px;
+            }
+
+            .subtitle {
+                font-size: 10px;
+                margin-top: 3px;
+            }
+
+            .logo {
+                width: 45px;
+                height: 45px;
+            }
+
+            .logo-container {
+                margin-bottom: 10px;
+                gap: 8px;
+            }
+
+            .header {
+                margin-bottom: 12px;
+            }
+
+            .bento-grid {
+                gap: 6px;
+                margin-bottom: 16px;
+            }
+
+            .card-value {
+                font-size: 14px;
+                margin-bottom: 4px;
+            }
+
+            .months-card .card-value {
+                font-size: 28px;
+            }
+
+            .seconds-card .card-value {
+                font-size: 22px;
+            }
+
+            .card-label {
+                font-size: 7px;
+                letter-spacing: 0.5px;
+            }
+
+            .bento-card {
+                padding: 8px 6px;
+                min-height: 75px;
+            }
+
+            .months-card {
+                min-height: 110px;
             }
         }
     </style>
@@ -466,6 +662,20 @@ function updateTime() {
 
 updateTime();
 setInterval(updateTime, 1000);
+
+// Empêcher le zoom du navigateur
+document.addEventListener('wheel', (e) => {
+    if (e.ctrlKey) {
+        e.preventDefault();
+    }
+}, { passive: false });
+
+// Empêcher le zoom avec les touches clavier
+document.addEventListener('keydown', (e) => {
+    if (e.ctrlKey && (e.key === '+' || e.key === '-' || e.key === '0')) {
+        e.preventDefault();
+    }
+});
 </script>
 
 </body>
